name:                html-to-text
version:             0.0.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -O2 -Wall
  default-language:    Haskell2010
  build-depends:       base >=4.12.0 && <4.15
                     , containers >=0.6.0 && <0.7
                     , tagsoup >=0.14.8 && <0.15
                     , text >=1.2.3 && <1.3
  exposed-modules:     Text.HTML.ToText
